--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "jsdom": "^16.4.0",
     "knex": "0.21.18",
     "pg": "8.5.1",
-    "jsdom":"^16.4.0",
+    "slugify": "^1.5.3",
     "strapi": "3.6.3",
     "strapi-admin": "3.6.3",
     "strapi-connector-bookshelf": "3.6.3",
