--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     ]
   },
   "dependencies": {
+    "@styled-icons/boxicons-regular": "^10.34.0",
+    "@styled-icons/boxicons-solid": "^10.34.0",
+    "@styled-icons/fa-brands": "^10.34.0",
+    "@styled-icons/material-outlined": "^10.34.0",
+    "@styled-icons/remix-fill": "^10.18.0",
     "next": "10.2.3",
     "next-pwa": "^5.2.21",
     "react": "17.0.2",
