--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@styled-icons/remix-fill": "^10.18.0",
     "next": "11.0.1",
     "next-pwa": "^5.2.21",
+    "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "storybook-addon-next-router": "^2.0.4",
