--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.4.1",
     "@styled-icons/boxicons-regular": "^10.37.0",
     "@styled-icons/boxicons-solid": "^10.34.0",
     "@styled-icons/fa-brands": "^10.34.0",
     "@styled-icons/material-outlined": "^10.34.0",
     "@styled-icons/remix-fill": "^10.18.0",
+    "graphql": "^15.5.1",
     "next": "11.0.1",
     "next-pwa": "^5.2.21",
     "polished": "^4.1.3",
