--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "graphql": "^15.5.1",
     "lodash.xor": "^4.5.0",
     "next": "11.0.1",
+    "next-auth": "^3.29.0",
     "next-pwa": "^5.2.21",
     "nextjs-progressbar": "^0.0.11",
     "polished": "^4.1.3",
