--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@styled-icons/remix-fill": "^10.18.0",
     "@types/lodash.xor": "^4.5.6",
     "graphql": "^15.5.1",
+    "joi": "^17.4.0",
     "lodash.xor": "^4.5.0",
     "next": "11.0.1",
     "next-auth": "^3.29.0",
