--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@storybook/addon-essentials": "6.3.0",
     "@storybook/react": "6.3.0",
+    "@testing-library/cypress": "^8.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
