--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --watch --maxWorkers=25%",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test dev 3000 cy:open",
     "schema:download": "apollo client:download-schema --endpoint=http://localhost:1337/graphql schema-temp.gql",
     "schema:convert": "node convertToNonNull.js",
     "codegen": "apollo codegen:generate --target typescript --excludes=node_modules/ --includes=src/graphql/**/*.ts --localSchemaFile schema.gql --tagName=gql --outputFlat src/graphql/generated",
@@ -90,6 +91,7 @@
     "node-fetch": "^2.6.1",
     "plop": "^2.7.4",
     "prettier": "^2.3.1",
+    "start-server-and-test": "^1.14.0",
     "typescript": "^4.3.4"
   }
 }
