--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@jackfranklin/test-data-bot": "^1.4.0",
     "@storybook/addon-essentials": "6.3.0",
     "@storybook/react": "6.3.0",
     "@testing-library/cypress": "^7.0.6",
